--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,10 +16,10 @@
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart",
             "launchBrowser": {
-                "enabled": true,
+                "enabled": false,
                 "args": "${auto-detect-url}",
                 "windows": {
-                    "command": "cmd.exe",
+                    "command": "firefox.exe",
                     "args": "/C start ${auto-detect-url}"
                 },
                 "osx": {
